[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", features = [
    "dynamic_linking",
] } # TODO: Remove dynamic linking on release mode
bevy-inspector-egui = "0.25.2"
bevy_dylib = "0.14.1"
bevy_hanabi = "0.12.2"
bevy_rapier2d = "0.27.0"
bevy_tweening = { version = "0.11.0", features = ["bevy_sprite", "bevy_asset"] }
rand = "0.8.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

# for Linux
# [target.x86_64-unknown-linux-gnu]
# linker = "clang"
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# # for Windows
# [target.x86_64-pc-windows-msvc]
# linker = "rust-lld.exe"
